src/objects/CDB_Application_Log__c.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CDB Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Endpoint__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CDB Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDB Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>